--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -9,10 +9,11 @@
 name: 编译通用镜像
 
 on:
+  push:
+    paths:
+      - '.github/workflows/编译通用镜像.yml'
   schedule:
-    - cron: 0 12 * * 5
-  watch:
-    types: started
+    - cron: 0 12 * * *
   repository_dispatch:
   workflow_dispatch:
 
