--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -13,7 +13,7 @@ on:
     paths:
       - '.github/workflows/编译通用镜像.yml'
   schedule:
-    - cron: 0 12 * * *
+    - cron: 0 12 * * 6
   repository_dispatch:
   workflow_dispatch:
 
