--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -9,9 +9,9 @@
 name: 编译通用镜像
 
 on:
-  push:
-    paths:
-      - '.github/workflows/编译通用镜像.yml'
+ # push:
+ #   paths:
+ #     - '.github/workflows/编译通用镜像.yml'
   schedule:
     - cron: 0 0 * * 1
   repository_dispatch:
