--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -9,9 +9,16 @@
 name: 编译通用镜像
 
 on:
-  # schedule:
-  #   - cron: "0 0 1/2 * *"
   workflow_dispatch:
+  repository_dispatch:
+
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: 0 16 * * *
+  watch:
+    types: started
 
 env:
   # REPO_URL: https://github.com/coolsnowwolf/lede.git
