--- a/.github/workflows/ax1800.yml
+++ b/.github/workflows/ax1800.yml
@@ -173,10 +173,10 @@ jobs:
       id: Packages
       if: ${{ steps.compile.outputs.status }} == 'success' && !cancelled()
       run: |
-        cd $OPENWRT_PATH/bin/targets/*/*
+        cd ${{ env.OPENWRT_PATH }}/bin/targets/*/*
         cat sha256sums
-        cp $OPENWRT_PATH/.config build.config
-        mv -f $OPENWRT_PATH/bin/packages/*/*/*.ipk packages
+        cp ${{ env.OPENWRT_PATH }}/.config build.config
+        mv -f ${{ env.OPENWRT_PATH }}/bin/packages/*/*/*.ipk packages
         tar -zcf Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo
         echo "FIRMWARE_PATH=$PWD" >> $GITHUB_OUTPUT
